BusOne/src/objects/Content_Acknowledgement_Item_vod__c.object
<CustomObject>
    <description>Maintains product level details for the fulfillment records stored in the Content Acknowledgement object.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the Account that requested the product for fulfillment.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Content Acknowledgement Items</relationshipLabel>
        <relationshipName>Content_Acknowledgement_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Content_Acknowledgement_vod__c</fullName>
        <description>References the Call record that contains the initial BRC request.</description>
        <label>AOC</label>
        <referenceTo>Content_Acknowledgement_vod__c</referenceTo>
        <relationshipLabel>Content Acknowledgement Items</relationshipLabel>
        <relationshipName>Content_Acknowledgement_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Distributor_vod__c</fullName>
        <description>Indicates the name of the distribution company for the BRC product being shipped.</description>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>Unique record Id used for data loading.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lot_vod__c</fullName>
        <description>The lot number of the BRC product shipped to the practitioner.</description>
        <label>Lot #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_vod__c</fullName>
        <description>Indicates the name of the manufacturer for the BRC product being shipped.</description>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>Field used by mobile products for synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Name_vod__c</fullName>
        <description>Stores the textual name of the Product for the case where the Product record is deleted. This field is updated when the AOC record is set to complete.</description>
        <label>Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the product that was shipped to the practitioner.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Content Acknowledgement Items</relationshipLabel>
        <relationshipName>Content_Acknowledgement_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Quantity_vod__c</fullName>
        <description>The quantity of BRC product received by the practitioner.</description>
        <label>Received Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_Quantity_vod__c</fullName>
        <description>The quantity of BRC product shipped to the practitioner.</description>
        <label>Ship Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_vod__c</fullName>
        <description>Stores the tracking number of the product line item included in the product shipment.</description>
        <label>Tracking #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>U_M_vod__c</fullName>
        <description>Stores the unit of measure of the product that was shipped to the practitioner.</description>
        <label>U/M</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Content Acknowledgement Item</label>
    <nameField>
        <displayFormat>AOCL-{000000000}</displayFormat>
        <label>AOC Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Acknowledgement Items</pluralLabel>
    <recordTypes>
        <fullName>Call_vod</fullName>
        <active>true</active>
        <description>Used to capture detail level data of BRC product requested via Calls</description>
        <label>Call_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>